:ambulance: fix build system