@@ -90,12 +90,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.3.5</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.6.1</version>
@@ -160,7 +154,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.4.0</version>
 				<configuration>
-					<additionalparam>--add-modules ALL-SYSTEM</additionalparam>
+					<show>private</show>
 				</configuration>
 			</plugin>
 
